--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,19 @@
+/* = = = = = = = = = = = = = */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
 }
 
 a {
@@ -22,20 +25,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 1.2rem;
+  line-height: 1.6;
 }
 
 button {
+  width: 100%;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,6 +41,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 button:hover {
   border-color: #646cff;
@@ -57,23 +54,66 @@ button:focus-visible {
 .card {
   padding: 2em;
 }
+/* = = = = = = = = = = = = = */
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
+header {
+  background-color: #eee;
   padding: 2rem;
   text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.hero {
+  text-align: center;
+  padding: 1rem 0;
+}
+
+form {
+  padding: 0 2rem 8rem;
+}
+
+.row {
+  padding-bottom: 1rem;
+}
+
+.row .caution {
+  display: flex;
+  font-size: 0.8rem;
+  color: #555;
+}
+
+input:not([type="radio"]),
+select {
+  width: -webkit-fill-available;
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 0.6rem 0.8rem;
+}
+
+p.alt-label {
+  margin: 0;
+  margin-bottom: 0.2rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 0.2rem;
+}
+
+.radio-label {
+  display: inline-block;
+}
+
+.two-col {
+  display: flex;
+  gap: 1rem;
+}
+
+.two-col div {
+  flex-grow: 1;
+}
+
+.inline-inputs {
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
